# carecaca

./: Cargo.toml  README.md  bacon.toml  devenv.nix  shell.nix
.github/workflows/: rust.yml
circus/: Cargo.toml
circus/src/: cards.rs  game_state.rs  main.rs
clown/: Cargo.toml
clown/.cargo/: config.toml
clown/assets/: .gitignore
clown/src/: main.rs
shitface/: Cargo.toml
shitface/src/: deck.rs  lib.rs  player.rs
shitface/src/cards/: card.rs  card_color.rs  card_rank.rs  card_suits.rs  card_type.rs  mod.rs
